bobcat (2.11.00) [ISN]

  * Repaired bug in Process due to which single quoted process arguments
    were not correctly passed on to the child process

  * Removed all Errno insertable/throwable manipulator calls from Bobcat

  * Removed empty source file bigint/checked5.cc

  * IOStream(istream &, ostream &)'s constructor now also opens the IOStream
    object (as it always should have done)

  * Updated several man-pages

bobcat (2.10.03)

  * Matthias Klose detected several bugs/omissions in Bobcat's  shared library
    construction. Now fixed.

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Wed, 29 Dec 2010 17:14:06 +0100

bobcat (2.10.02)

  * ConfigFile's size() member was missing. Now repaired.

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Sat, 25 Dec 2010 11:02:02 +0100

bobcat (2.10.01)

  * TableLines' default and move constructor and move assignment operator
    were accidentally put in the private section of their class. Now public.

  * Configfile's overloaded assignment operator used non const &
    argument. Repaired. 

  * CmdFinderBase's overloaded assignment operator cannot be defaulted as it
    lives in the class's protected section. Added explicit implementation of
    the overloaded assignment operator.

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Sun, 19 Dec 2010 21:29:26 +0100

bobcat (2.10.00)

  * Reorganized the class ConfigFile. It used inheritance the wrong way (it
    inherited to reuse its base class rather than the base class being reused
    (cf. Herb Sutter's Exceptional C++)) and it suffered from several other
    flaws. ConfigFile now also supports a move constructor and move overloaded
    assignment operator.

  * Repaired ArgConfig::longConfigOpt(string const &longOpt). It checked for
    the longOpt\b pattern, but \b matches also the - character as a word
    delimiter. Therefore, pattern xyz-pqr is matched when looking for pattern
    xyz. It's now using (\s|$) rather than \b.
