@@ -1,0 +1,7 @@
+#include "ifdstreambuf.ih"
+
+IFdStreambuf::~IFdStreambuf()
+{
+    cleanup(d_mode);
+}
+
