@@ -1,0 +1,5 @@
+#include "ifdstreambuf.ih"
+
+void IFdStreambuf::
+{
+}
