@@ -8,6 +8,7 @@ void OFdStreambuf::cleanup(Mode mode)
         if (d_mode == CLOSE_FD)
             close(d_fd);
         delete [] d_buffer;
+        d_buffer = 0;
     }
 }
     
