@@ -1,0 +1,7 @@
+#include "ofdstreambuf.ih"
+
+OFdStreambuf::~OFdStreambuf()
+{
+    cleanup(d_mode);
+}
+
