@@ -1,0 +1,5 @@
+#include "ofdstreambuf.ih"
+
+void OFdStreambuf::
+{
+}
